# BoatDetection

./: CMakeLists.txt  README.md
data/: MLP64.xml  dataset_eigenvectors.csv  dataset_normalization.csv
include/: DetectionUtils.h  MLUtils.h
source/: DetectionUtils.cpp  MLUtils.cpp  detector.cpp  training.cpp
